# gen/models/auth_request.go
@@ -1,0 +1,227 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// AuthRequest auth request
+//
+// swagger:model auth-request
+type AuthRequest struct {
+
+	// request
+	Request *AuthRequestRequest `json:"request,omitempty"`
+
+	// user
+	User *AuthRequestUser `json:"user,omitempty"`
+}
+
+// Validate validates this auth request
+func (m *AuthRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateRequest(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUser(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AuthRequest) validateRequest(formats strfmt.Registry) error {
+	if swag.IsZero(m.Request) { // not required
+		return nil
+	}
+
+	if m.Request != nil {
+		if err := m.Request.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("request")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("request")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *AuthRequest) validateUser(formats strfmt.Registry) error {
+	if swag.IsZero(m.User) { // not required
+		return nil
+	}
+
+	if m.User != nil {
+		if err := m.User.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("user")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("user")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this auth request based on the context it is used
+func (m *AuthRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateRequest(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateUser(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AuthRequest) contextValidateRequest(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Request != nil {
+		if err := m.Request.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("request")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("request")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *AuthRequest) contextValidateUser(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.User != nil {
+		if err := m.User.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("user")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("user")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AuthRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AuthRequest) UnmarshalBinary(b []byte) error {
+	var res AuthRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
+
+// AuthRequestRequest auth request request
+//
+// swagger:model AuthRequestRequest
+type AuthRequestRequest struct {
+
+	// GET, POST, PATCH or DELETE...
+	Method string `json:"method,omitempty"`
+
+	// path
+	Path string `json:"path,omitempty"`
+}
+
+// Validate validates this auth request request
+func (m *AuthRequestRequest) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this auth request request based on context it is used
+func (m *AuthRequestRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AuthRequestRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AuthRequestRequest) UnmarshalBinary(b []byte) error {
+	var res AuthRequestRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
+
+// AuthRequestUser auth request user
+//
+// swagger:model AuthRequestUser
+type AuthRequestUser struct {
+
+	// username
+	Username string `json:"username,omitempty"`
+}
+
+// Validate validates this auth request user
+func (m *AuthRequestUser) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this auth request user based on context it is used
+func (m *AuthRequestUser) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AuthRequestUser) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AuthRequestUser) UnmarshalBinary(b []byte) error {
+	var res AuthRequestUser
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
