# gen/restapi/operations/auth/authorize_request.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package auth
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// AuthorizeRequestHandlerFunc turns a function with the right signature into a authorize request handler
+type AuthorizeRequestHandlerFunc func(AuthorizeRequestParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn AuthorizeRequestHandlerFunc) Handle(params AuthorizeRequestParams) middleware.Responder {
+	return fn(params)
+}
+
+// AuthorizeRequestHandler interface for that can handle valid authorize request params
+type AuthorizeRequestHandler interface {
+	Handle(AuthorizeRequestParams) middleware.Responder
+}
+
+// NewAuthorizeRequest creates a new http.Handler for the authorize request operation
+func NewAuthorizeRequest(ctx *middleware.Context, handler AuthorizeRequestHandler) *AuthorizeRequest {
+	return &AuthorizeRequest{Context: ctx, Handler: handler}
+}
+
+/*
+	AuthorizeRequest swagger:route POST /authorize Auth authorizeRequest
+
+validate request
+*/
+type AuthorizeRequest struct {
+	Context *middleware.Context
+	Handler AuthorizeRequestHandler
+}
+
+func (o *AuthorizeRequest) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewAuthorizeRequestParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
