# gen/restapi/operations/auth/authorize_request_responses.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package auth
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"auth-api-example/gen/models"
+)
+
+// AuthorizeRequestOKCode is the HTTP code returned for type AuthorizeRequestOK
+const AuthorizeRequestOKCode int = 200
+
+/*
+AuthorizeRequestOK successful operation
+
+swagger:response authorizeRequestOK
+*/
+type AuthorizeRequestOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.AuthResponse `json:"body,omitempty"`
+}
+
+// NewAuthorizeRequestOK creates AuthorizeRequestOK with default headers values
+func NewAuthorizeRequestOK() *AuthorizeRequestOK {
+
+	return &AuthorizeRequestOK{}
+}
+
+// WithPayload adds the payload to the authorize request o k response
+func (o *AuthorizeRequestOK) WithPayload(payload *models.AuthResponse) *AuthorizeRequestOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the authorize request o k response
+func (o *AuthorizeRequestOK) SetPayload(payload *models.AuthResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AuthorizeRequestOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+AuthorizeRequestDefault generic error response
+
+swagger:response authorizeRequestDefault
+*/
+type AuthorizeRequestDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Default `json:"body,omitempty"`
+}
+
+// NewAuthorizeRequestDefault creates AuthorizeRequestDefault with default headers values
+func NewAuthorizeRequestDefault(code int) *AuthorizeRequestDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &AuthorizeRequestDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the authorize request default response
+func (o *AuthorizeRequestDefault) WithStatusCode(code int) *AuthorizeRequestDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the authorize request default response
+func (o *AuthorizeRequestDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the authorize request default response
+func (o *AuthorizeRequestDefault) WithPayload(payload *models.Default) *AuthorizeRequestDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the authorize request default response
+func (o *AuthorizeRequestDefault) SetPayload(payload *models.Default) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AuthorizeRequestDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
