# swagger/swagger.yaml
@@ -148,10 +148,35 @@ paths:
           description: generic error response
           schema:
             $ref: "#/definitions/default"
+  
+  /authorize:
+    post:
+      description: validate request
+      tags:
+        - Auth
+      operationId: authorizeRequest
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/auth-request"
+          
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: "#/definitions/auth-response"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/default"
           
 tags:
   - name: Users
     description: users endpoints
+    
+  - name: Auth
+    description: request authorization endpoint
 
 definitions:
   default:
@@ -194,3 +219,32 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/user"
+
+  auth-request:
+    type: object
+    properties:
+      user:
+        type: object
+        properties:
+          username: 
+            type: string
+      request:
+        type: object
+        properties:
+          method:
+            type: string
+            description: GET, POST, PATCH or DELETE... 
+          path:
+            type: string
+    
+  auth-response:
+    type: object
+    properties:
+      status: 
+        type: string
+      data:
+        type: object
+        properties:
+          result:
+            type: string
+          
